<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Play With Words</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Round">1/20</string>
    <string name="Round0">0/20</string>
    <string name="QuestionMode1">Satellite</string>
    <string name="QuestionMode3">A fossil fuel in the gaseous state; used for cooking and heating homes</string>

    <string name="Check">Check</string>
    <string name="shareNow">Share Now</string>
    <string name="Intro_mode6_1">Speak out the giving sentence</string>
    <string name="Intro_mode6_3">Hold to record your voice</string>
    <string name="Transcription">/ˈsætəlaɪt/</string>
    <string name="Answer1">hành tinh</string>
    <string name="Answer2">vệ tinh</string>
    <string name="Answer3">vì sao</string>
    <string name="Answer4">sao băng</string>
    <string name="Score">0</string>
    <string name="Hint">Hint: 5/5</string>
    <string name="Intro_mode1">Choose one of\nthe four options that\ndescribes the giving word\nin VietNamese</string>
    <string name="Intro_mode2">Choose one of\nthe four options that\ndescribes the giving\npicture in English</string>

    <string name="Intro_mode3">Fill in the blank\nwith a suitable word\nthat matches\nthe giving definition</string>

    <string name="Intro_mode3L">Fill in the blank with a suitable word that matches the giving definition</string>

    <string name="textNote">Note: The number of letters is shown in the beginning</string>

    <string name="textHint">Your answer</string>
    <string name="Intro_mode4">Listen carefully and\nwrite down the word.\nPress DONE button\nto finish the task.</string>
    <string name="Intro_mode5">By putting words in\nthe right order,\nform a suitable sentence\nthat has the giving\nVietnamese meaning</string>
    <string name="Result">17/20</string>\
    <string name="title_mode5">Write this entry in English</string>
    <string name="title_mode6">Speak this sentence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--Menu-->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="titleAboutUs">ABOUT US</string>
    <string name="txtContentAboutUs">Play with word is an app by Team 15 </string>
    <string name="txtMember">Member</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>
    <string name="userName">Thanh Huong</string>
    <string name="point">Point: 250</string>
    <string name="ranking">2nd</string>
    <string name="aboutUs">About Us</string>
    <string name="rankingMenu">Rankings</string>
    <string name="logOut">Rankings</string>

    <string name="mssvHuong">1612243</string>
    <string name="nameHuong">Nguyen Thi Thanh Huong</string>
    <string name="nhiemvuHuong">Developer + Designer</string>

    <string name="mssvDuy">1612143</string>
    <string name="nameDuy">Tran Phan Phu Duy</string>
    <string name="nhiemvuDuy">Developer + Designer</string>

    <string name="mssvDHuy">1612254</string>
    <string name="nameDHuy">Le Duc Huy</string>
    <string name="nhiemvuDHuy">Developer + Tester</string>

    <string name="mssvQHuy">1612263</string>
    <string name="nameQHuy">Nguyen Quang Huy</string>
    <string name="nhiemvuQHuy">Developer + B.A</string>

    <string name="mssvToan">1512281</string>
    <string name="nameToan">Dao Minh Toan</string>
    <string name="nhiemvuToan">Manager + Developer</string>

    <string name="mssvHuan">1612222</string>
    <string name="nameHuan">Nguyen Quang Huan</string>
    <string name="nhiemvuHuan">Designer + Developer</string>

    <string name="titleRanking">RANKINGS</string>

    <string name="userWin1">Bob</string>
    <string name="userWin2">Pooh</string>
    <string name="userWin3">Birdy</string>
    <string name="dialog_fire_missiles">YES</string>
    <string name="fire">Có</string>
    <string name="cancel">Không</string>
    <string name="btnSubmit">Submit</string>


    <!--Used for SignIn.....-->
    <string name="title">PLAY WITH WORDS</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="update">UPDATE</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="connectWith">Connect with</string>
    <string name="facebook_app_id">199136370967670</string>
    <string name="fb_login_protocol_scheme">fb199136370967670</string>
    <string name="string">"You have already signed in.\nEnjoy our game!"</string>

    <!--Used for Mode 5.....-->
    <string name="check">Check</string>
    <string name="mode5_title">Write this entry in English</string>
    <string name="mode5_hintquestion">Toi doc mot to bao</string>
    <!--Used for Mode 7.......-->
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="activity_name_classification">TF Classify</string>
    <string name="activity_name_detection">TF Detect</string>

</resources>
